clusters/talos-pve/apps/jellyfin/network-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: jellyfin-app-restrict
  namespace: jellyfin
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
      app.kubernetes.io/instance: jellyfin

  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8096"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: jellyseerr
            app.kubernetes.io/instance: jellyseerr
      toPorts:
        - ports:
            - port: "8096"
              protocol: TCP


  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"

    - toEntities:
        - world
